// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Complex Test 1 1`] = `
Array [
  Object {
    "birthDate": 2001-12-23T00:00:00.000Z,
    "caseDetect": true,
    "id": 23,
    "sort": 138,
  },
  Object {
    "birthDate": 2001-12-21T00:00:00.000Z,
    "caseDetect": true,
    "id": 21,
    "sort": 126,
  },
  Object {
    "birthDate": 2001-12-19T00:00:00.000Z,
    "caseDetect": true,
    "id": 19,
    "sort": 114,
  },
  Object {
    "birthDate": 2001-12-17T00:00:00.000Z,
    "caseDetect": true,
    "id": 17,
    "sort": 102,
  },
  Object {
    "birthDate": 2001-12-03T00:00:00.000Z,
    "caseDetect": true,
    "id": 11,
    "sort": 66,
  },
  Object {
    "birthDate": 2001-10-03T00:00:00.000Z,
    "caseDetect": true,
    "id": 9,
    "sort": 54,
  },
  Object {
    "birthDate": 2001-08-03T00:00:00.000Z,
    "caseDetect": true,
    "id": 7,
    "sort": 42,
  },
  Object {
    "birthDate": 2001-06-03T00:00:00.000Z,
    "caseDetect": true,
    "id": 5,
    "sort": 30,
  },
  Object {
    "birthDate": 2001-04-03T00:00:00.000Z,
    "caseDetect": true,
    "id": 3,
    "sort": 18,
  },
]
`;

exports[`Complex Test 2 1`] = `
Array [
  Object {
    "birthDate": 2001-12-27T00:00:00.000Z,
    "caseDetect": true,
    "id": 27,
    "sort": 162,
  },
  Object {
    "birthDate": 2001-12-25T00:00:00.000Z,
    "caseDetect": true,
    "id": 25,
    "sort": 150,
  },
  Object {
    "birthDate": 2001-12-23T00:00:00.000Z,
    "caseDetect": true,
    "id": 23,
    "sort": 138,
  },
  Object {
    "birthDate": 2001-12-21T00:00:00.000Z,
    "caseDetect": true,
    "id": 21,
    "sort": 126,
  },
  Object {
    "birthDate": 2001-12-03T00:00:00.000Z,
    "caseDetect": true,
    "id": 11,
    "sort": 66,
  },
  Object {
    "birthDate": 2001-10-03T00:00:00.000Z,
    "caseDetect": true,
    "id": 9,
    "sort": 54,
  },
  Object {
    "birthDate": 2001-08-03T00:00:00.000Z,
    "caseDetect": true,
    "id": 7,
    "sort": 42,
  },
]
`;
